# PipelineService

./: CMakeLists.txt  README.md
src/: MyMacros.h  NumberUtil.hpp  StringUtil.hpp  main.cpp
src/core/: SpatialHelper.cpp  SpatialHelper.h
src/service/: RestService.cpp  RestService.h
src/test/: spatialHelperTest.cpp
